Get logs (#6)
* added deploylogs endpoint

* added docker sock mount

* corrected var get

* some test corrections

* dump to the start test tests
